# hr-operations-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
agent/: __init__.py  _inprocess_session.py  audit.py  classifier.py  conflict_resolver.py  orchestrator.py
api/: __init__.py  index.py
db/: cost_dashboard.sql  schema.sql
docs/: jurisdiction.md  roadmap.md
docs/adr/: 0001-bounded-jurisdiction-coverage.md
docs/policies/: compensation-bands.md  contractor-to-fte-conversion.md  job-change-approval-matrix.md  offboarding-policy.md  performance-improvement-policy.md
mcp_servers/: __init__.py  hris_server.py  jurisdiction_rules.py  jurisdiction_server.py  policy_server.py
public/: app.js  index.html  style.css
scripts/: seed_data.py  seed_policies.py  smoke_test.py  test_classifier.py  test_jurisdiction.py  test_resolver.py
tests/: conftest.py  test_classifier.py  test_jurisdiction.py  test_resolver.py
